# mumt

./: .gitignore  README.md  pyproject.toml  requirements.txt
mumt_sim/: __init__.py  agents.py  display.py  pan_tilt.py  scene.py  spawn.py  teleop.py  vr_displays.py
mumt_sim/agent/: __init__.py  coverage.py  detection.py  head_cam.py  loop.py  memory.py  orchestrator.py  perception.py  pointing.py  recall.py  tools.py  visibility.py  voice.py
scripts/: 01_install_env.sh  02_fetch_assets.sh  03_install_unity_hub.sh  04_install_vr_assets.sh  05_process_unity_data.sh  06_run_sim_viewer_server.sh  07_run_mumt_hitl_server.sh  agent_chat_multi_spot.py  agent_chat_single_spot.py  find_centering_smoketest.py  mumt_hitl_app.py  process_unity_hssd.py  render_two_spots_one_human.py  teleop_spot.py  teleop_two_spots_with_coverage.py
scripts/config/: mumt_hitl.yaml
