[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mumt_sim"
version = "0.1.0"
description = "Habitat 3 sim with 2 Spot-like robots and 1 humanoid in HSSD; eventual VR via HITL."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "imageio",
]

[project.optional-dependencies]
# Pulled in when ``mumt.autonomy.enabled=true`` in mumt_hitl.yaml. The
# basic VR demo doesn't need any of these.
autonomy = [
    "google-genai>=0.3",
    "requests>=2.31",
    "opencv-python>=4.8",
]
voice = [
    "elevenlabs>=1.0",
    "sounddevice>=0.4",
]

[tool.setuptools.packages.find]
include = ["mumt_sim*"]
exclude = ["third_party*", "data*", "renders*", "scripts*"]
